# badminton-management

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  README.md  business.md  docker-compose.yml  fix-next-cannot-find-module.md  system-plan-checklist.md
backend/: .env  .env.example  Dockerfile  README.md  alembic.ini  delete_test_matches.py  entrypoint.sh  pyproject.toml  requirements.txt  test_referee.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_admin_local_auth.py  0003_user_sessions.py  0004_video_assessments.py  0005_video_reassessments.py  0006_tournaments.py  0007_refresh_tournament_demo_data.py  0008_public_platform.py  0009_refresh_discovery_demo_data.py  0010_tournament_admin_profiles.py  0011_owner_posts_tournament_crud.py  0012_tournament_bank_transfer.py  0013_court_min_rental_duration.py  (+2 more)
backend/app/: __init__.py  main.py
backend/database/: README.md  import_users.sql  schema.sql  tables-overview.md  usecase-flow-table-mapping.md
backend/scripts/: generate_30m_blocks.py
backend/tests/: conftest.py  test_admin_auth.py  test_errors.py  test_health.py  test_player_profiles.py  test_player_tournaments.py  test_public_platform.py  test_security.py  test_sprint2_owner.py  test_sprint3_player.py  test_sprint4_payments_checkin.py  test_sprint5_assessment_elo.py  test_sprint6_match_feedback.py  test_sprint7_chat.py  test_sprint8_admin_operations.py  test_sprint9_admin_rate_limit.py  test_sprint9_booking_concurrency.py  test_sprint9_role_regression.py  test_user_auth.py  test_video_assessment.py
(+133 files in other folders)
