[project]
name = "netup-backend"
version = "0.1.0"
description = "NetUp Sprint 0 FastAPI backend foundation"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.17.2",
  "fastapi>=0.122.0",
  "httpx>=0.28.1",
  "psycopg[binary]>=3.3.2",
  "pydantic-settings>=2.12.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.44",
  "uvicorn[standard]>=0.38.0",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
